--- a/index.html
+++ b/index.html
@@ -7,14 +7,18 @@
 <link rel="stylesheet" href="https://cdn.jsdelivr.net/npm/pannellum@2.5.6/build/pannellum.css"/>
 <link href="https://fonts.googleapis.com/css2?family=Saira:wght@400;700&display=swap" rel="stylesheet">
 <style>
+/* global */
 * { box-sizing:border-box; }
-html,body { height:100%; margin:0; font-family:'Saira',sans-serif; overflow:hidden; background:#000; }
+html,body { height:100%; margin:0; }
 body, #overlay, #overlay-content, #hotspot-panel, #video-link-panel,
 #license-bar, #tooltip-preview, #qr-overlay, #youtube-overlay,
 #vr-button, #top-qr-button { user-select: none; }
+body { margin:0; font-family:'Saira',sans-serif; overflow:hidden; position:relative; background:#000; text-align:center; }
 
+/* panorama container */
 #panorama { width:100vw; height:100vh; position:relative; z-index:0; }
 
+/* License bar */
 #license-bar {
   position: fixed;
   bottom: 12px;
@@ -27,41 +31,43 @@ body, #overlay, #overlay-content, #hotspot-panel, #video-link-panel,
   padding: 10px 18px;
   font-size: 13px;
   z-index: 12;
+  overflow-y: auto;
   text-align: center;
   white-space: pre-wrap;
   border-radius: 12px;
 }
 
+/* Intro overlay - center panel */
 #overlay {
   position: fixed;
   inset: 0;
-  background: rgba(0,0,0,0.4);
+  background: rgba(0,0,0,0.40);
   display:flex; align-items:center; justify-content:center;
   z-index:40;
 }
 #overlay[aria-hidden="true"] { display:none; }
-
 #overlay-content {
-  max-width: 360px;
-  min-width: 260px;
-  width: 32vw;
-  max-height: 500px;
+  width:35vw; max-width:90vw;
+  height:auto; max-height:80vh;
   background: rgba(255,255,255,0.18);
   backdrop-filter: blur(10px);
-  padding:20px;
+  padding:28px;
   border-radius:18px;
   color:#fff;
-  display:flex; flex-direction:column; justify-content:space-between;
-  align-items:center; text-align:center;
+  display:flex; flex-direction:column; justify-content:center; align-items:center;
+  font-size:1rem; line-height:1.4; text-align:center;
 }
+#overlay-content p { margin:0 0 10px 0; }
 
-#overlay-content p { margin: 0 0 12px 0; color:#fff; }
-#instructions-line { text-decoration:underline; font-weight:700; margin-top:6px; color:#fff; }
-#instructions-list { text-align:center; margin-top:8px; line-height:1.6em; color:#fff; }
-#instructions-list p { margin:4px 0; }
+/* Instructions */
+#instructions-line { text-decoration:underline; font-weight:700; margin-top:12px; color:#fff; }
+#instructions-list { text-align:center; margin-top:12px; max-width:480px; line-height:1.6em; color:#fff; }
+#instructions-list p { margin:6px 0 0 0; }
 
-#dismiss-message { margin-top:14px; font-size:0.95rem; color:#d0d0d0; text-align:center; }
+/* Dismiss message line (small, off-gray) */
+#dismiss-message { margin-top:16px; font-size:0.95rem; color:#d0d0d0; text-align:center; }
 
+/* tooltip preview */
 #tooltip-preview {
   display:none;
   position: fixed;
@@ -72,18 +78,20 @@ body, #overlay, #overlay-content, #hotspot-panel, #video-link-panel,
   padding:10px;
   border-radius:10px;
   z-index:9999;
-  pointer-events:auto;
+  pointer-events:none;
   font-size:0.85rem;
   line-height:1.2;
   box-shadow: 0 6px 18px rgba(0,0,0,0.6);
 }
+#tooltip-preview img { width:100%; height:auto; border-radius:8px; display:block; margin-bottom:8px; }
 
+/* hotspot panel */
 #hotspot-panel {
   position: fixed;
   top: 18px;
   left:50%;
   transform: translateX(-50%);
-  background: rgba(0,0,0,0.2);
+  background: rgba(0,0,0,0.20);
   backdrop-filter: blur(10px);
   padding:12px 18px;
   border-radius:14px;
@@ -95,12 +103,13 @@ body, #overlay, #overlay-content, #hotspot-panel, #video-link-panel,
   display:none;
 }
 
+/* 360 video panel */
 #video-link-panel {
   position: fixed;
-  top: 108px;
+  top: 128px; /* bigger gap */
   left:50%;
   transform:translateX(-50%);
-  background: rgba(0,0,0,0.2);
+  background: rgba(0,0,0,0.20);
   backdrop-filter: blur(10px);
   padding:10px 14px;
   border-radius:12px;
@@ -113,6 +122,7 @@ body, #overlay, #overlay-content, #hotspot-panel, #video-link-panel,
   display:none;
 }
 
+/* youtube modal */
 #youtube-overlay {
   display:none; position:fixed; inset:0; background: rgba(0,0,0,0.55);
   z-index:70; align-items:center; justify-content:center; opacity:0; transition:opacity .28s;
@@ -125,32 +135,21 @@ body, #overlay, #overlay-content, #hotspot-panel, #video-link-panel,
 }
 #youtube-content iframe { width:100%; height:100%; border-radius:10px; border:none; }
 
+/* QR overlay */
 #qr-overlay {
   display:none; position:fixed; inset:0; background: rgba(0,0,0,0.55);
   z-index:70; align-items:center; justify-content:center; opacity:0; transition:opacity .28s;
 }
 #qr-content {
-  background: rgba(255,255,255,0.14);
-  backdrop-filter: blur(10px);
-  border-radius: 16px;
-  padding: 16px;
-  width:auto;
-  height:auto;
-  max-width:90%;
-  display:flex;
-  flex-direction:column;
-  align-items:center;
-  justify-content:center;
+  background: rgba(255,255,255,0.14); backdrop-filter: blur(10px);
+  border-radius:16px; padding:16px;
+  width:auto; max-width:40vw; height:auto; max-height:60vh;
+  display:flex; flex-direction:column; align-items:center; justify-content:center;
 }
-#qr-content img {
-  width:25vw;
-  max-width:200px;
-  height:auto;
-  border-radius:8px;
-  margin-bottom:12px;
-}
-#qr-content p { color:#d0d0d0; margin:0; font-size:0.95rem; text-align:center; }
+#qr-content img { width:50%; height:auto; border-radius:8px; margin-bottom:12px; }
+#qr-content p { color:#d0d0d0; margin-top:0; font-size:0.95rem; text-align:center; }
 
+/* QR and VR buttons */
 #top-qr-button, #vr-button {
   position:fixed; right: 12px; padding:8px 12px; border-radius:12px;
   background: rgba(0,0,0,0.18); backdrop-filter: blur(8px);
@@ -159,18 +158,30 @@ body, #overlay, #overlay-content, #hotspot-panel, #video-link-panel,
 #top-qr-button { top:12px; }
 #vr-button { top:64px; display:none; }
 
+/* responsive adjustments */
+@media (max-width:900px) {
+  #overlay-content { width:60vw; font-size:0.98rem; padding:18px; }
+  #qr-content { max-width:48vw; max-height:56vh; }
+  #video-link-panel { top: 148px; max-width:86%; }
+}
+@media (max-width:480px) {
+  #overlay-content { width:72vw; font-size:0.95rem; padding:14px; }
+  #qr-content { max-width:64vw; max-height:50vh; }
+  #hotspot-panel { font-size:0.9rem; padding:10px; }
+  #video-link-panel { font-size:0.95rem; top: 168px; max-width:88%; }
+}
 </style>
 </head>
 <body>
 
+<!-- Panorama container -->
 <div id="panorama"></div>
 
+<!-- Intro overlay -->
 <div id="overlay" role="dialog" aria-modal="true">
   <div id="overlay-content" role="document">
     <p>Hi, I'm Lex, a nobody magician who enjoys travel, tech and research. These images are from my recent travels in Northern California taken with a DJI OSMO 360 camera at 120 MP.</p>
     <p>If you would like to see my other work click <span id="preview-link" style="text-decoration:underline; color:#bfe; cursor:pointer;">here</span>.</p>
-
-    <div style="height:8px;"></div>
 
     <div id="instructions-line">Instructions</div>
     <div id="instructions-list">
@@ -179,31 +190,36 @@ body, #overlay, #overlay-content, #hotspot-panel, #video-link-panel,
       <p>• Use fullscreen button for best experience.</p>
     </div>
 
-    <div style="height:14px;"></div>
-    <div id="dismiss-message">Click Anywhere to Dismiss this Message</div>
+    <div style="margin-top:16px;" id="dismiss-message">Click Anywhere to Dismiss this Message</div>
   </div>
 </div>
 
+<!-- Tooltip preview (hover over "here") -->
 <div id="tooltip-preview" role="tooltip" aria-hidden="true">
-  <img src="https://i.imgur.com/eKxOrcZ.jpeg" alt="preview" style="width:100%; height:auto; border-radius:8px; display:block; margin-bottom:8px;">
+  <img src="https://i.imgur.com/eKxOrcZ.jpeg" alt="preview">
   <div style="font-size:0.9rem;"><a id="tooltip-link" href="https://linktr.ee/lexofdystopia" target="_blank" rel="noopener" style="color:#fff; text-decoration:underline;">https://linktr.ee/lexofdystopia</a></div>
 </div>
 
+<!-- Manhattan Beach panel -->
 <div id="hotspot-panel" aria-hidden="true">
   Manhattan Beach at Half Moon Bay, California located in the San Francisco Bay Area.<br>
   The Ritz-Carlton can be seen on the distant cliffs.<br>
   The coastal shores are lined with miles of golf courses.
 </div>
 
+<!-- 360 video link panel -->
 <div id="video-link-panel" aria-hidden="true">
   <span id="manhattan-video-text" style="text-decoration:underline; color:#9fd6ff;">Click Here to Watch a 360 Video of this Location</span>
 </div>
 
+<!-- license bar -->
 <div id="license-bar">Loading license...</div>
 
+<!-- QR and VR buttons -->
 <button id="top-qr-button" aria-controls="qr-overlay" aria-expanded="false">QR</button>
 <button id="vr-button" aria-hidden="true">VR</button>
 
+<!-- youtube overlay -->
 <div id="youtube-overlay" aria-hidden="true">
   <div id="youtube-content">
     <iframe id="youtube-frame" allowfullscreen referrerpolicy="no-referrer"></iframe>
@@ -211,6 +227,7 @@ body, #overlay, #overlay-content, #hotspot-panel, #video-link-panel,
   </div>
 </div>
 
+<!-- qr overlay -->
 <div id="qr-overlay" aria-hidden="true">
   <div id="qr-content">
     <img src="VRQR.png" alt="QR code">
@@ -246,52 +263,84 @@ const youtubeOverlay = document.getElementById('youtube-overlay');
 const youtubeFrame = document.getElementById('youtube-frame');
 const licenseBar = document.getElementById('license-bar');
 
-overlay.addEventListener('click', ev => {
-  if (ev.target.closest && ev.target.closest('#overlay-content')) {
-    if(ev.target === previewLink) return; // ignore hyperlink
-    // otherwise allow overlay-content to be dismiss zone
-  }
-  overlay.setAttribute('aria-hidden','true'); overlay.style.display='none';
-  hotspotPanel.style.display='block'; videoLinkPanel.style.display='block';
+/* LICENSE loading */
+fetch('LICENSE').then(r => r.ok ? r.text() : Promise.reject('no')).then(text => {
+  licenseBar.textContent = text;
+}).catch(()=>{ licenseBar.textContent = 'LICENSE file not found.'; });
+
+/* --- Overlay dismissal --- */
+function dismissOverlay(e){
+  if(e.target.closest('#preview-link')) return;
+  overlay.setAttribute('aria-hidden','true');
+  overlay.style.display='none';
+  hotspotPanel.style.display='block';
+  videoLinkPanel.style.display='block';
+}
+document.addEventListener('click', dismissOverlay);
+
+/* --- Tooltip follows cursor --- */
+previewLink.addEventListener('mouseenter', ()=> tooltip.style.display='block');
+previewLink.addEventListener('mousemove', e=>{
+  tooltip.style.left = (e.clientX + 12) + 'px';
+  tooltip.style.top = (e.clientY + 12) + 'px';
+});
+previewLink.addEventListener('mouseleave', ()=> tooltip.style.display='none');
+
+/* Clicking 'here' opens new tab without dismissing */
+previewLink.addEventListener('click', e=>{
+  e.stopPropagation(); e.preventDefault();
+  window.open('https://linktr.ee/lexofdystopia','_blank','noopener');
 });
 
-previewLink.addEventListener('click', e => { e.stopPropagation(); window.open('https://linktr.ee/lexofdystopia','_blank','noopener'); });
-previewLink.addEventListener('mouseenter', ()=>{ tooltip.style.display='block'; tooltip.setAttribute('aria-hidden','false'); });
-previewLink.addEventListener('mouseleave', ()=>{ setTimeout(()=>{ if(!tooltip.matches(':hover')){ tooltip.style.display='none'; tooltip.setAttribute('aria-hidden','true'); } },80); });
-tooltip.addEventListener('mouseenter', ()=>{ tooltip.style.display='block'; tooltip.setAttribute('aria-hidden','false'); });
-tooltip.addEventListener('mouseleave', ()=>{ tooltip.style.display='none'; tooltip.setAttribute('aria-hidden','true'); });
-tooltipLink.addEventListener('click', e=>{ e.stopPropagation(); });
+/* Tooltip link */
+tooltipLink.addEventListener('click', e=> e.stopPropagation());
 
+/* 360 video modal */
 videoLinkPanel.addEventListener('click', e=>{
   e.stopPropagation();
   youtubeFrame.src="https://www.youtube.com/embed/sfYM1-_WbWk?rel=0&autoplay=1";
   youtubeOverlay.style.display='flex';
-  requestAnimationFrame(()=> youtubeOverlay.style.opacity = 1);
+  requestAnimationFrame(()=> youtubeOverlay.style.opacity=1);
 });
 youtubeOverlay.addEventListener('click', ()=>{
   youtubeOverlay.style.opacity=0;
-  setTimeout(()=> { youtubeOverlay.style.display='none'; youtubeFrame.src=''; },280);
+  setTimeout(()=> { youtubeOverlay.style.display='none'; youtubeFrame.src=''; }, 280);
 });
 
-qrBtn.addEventListener('click', e=>{ e.stopPropagation(); qrOverlay.style.display='flex'; requestAnimationFrame(()=> qrOverlay.style.opacity=1); });
-qrOverlay.addEventListener('click', ()=>{ qrOverlay.style.opacity=0; setTimeout(()=> qrOverlay.style.display='none',300); });
-qrContent.addEventListener('click', ()=>{ qrOverlay.style.opacity=0; setTimeout(()=> qrOverlay.style.display='none',300); });
+/* QR overlay */
+qrBtn.addEventListener('click', e=>{
+  e.stopPropagation();
+  qrOverlay.style.display='flex';
+  requestAnimationFrame(()=> qrOverlay.style.opacity=1);
+});
+qrOverlay.addEventListener('click', ()=>{
+  qrOverlay.style.opacity=0;
+  setTimeout(()=> qrOverlay.style.display='none', 280);
+});
+qrContent.addEventListener('click', e=> qrOverlay.style.display='none');
 
-fetch('LICENSE').then(r=>r.ok?r.text():Promise.reject('no')).then(t=>licenseBar.textContent=t).catch(()=>{licenseBar.textContent='LICENSE file not found.';});
+/* VR button */
+vrBtn.addEventListener('click', e=>{
+  e.stopPropagation();
+  const w = window.open('vr.html','_blank','noopener');
+  if(!w) alert('Popup blocked. Allow popups for immersive VR.');
+});
 
+/* WebXR detection */
 async function detectVRHeadset(){
   if(navigator.xr && navigator.xr.isSessionSupported){
-    try{ const supported=await navigator.xr.isSessionSupported('immersive-vr'); if(supported) return { manufacturer:'WebXR', model:'immersive-vr'};}catch{}
+    try{ const supported = await navigator.xr.isSessionSupported('immersive-vr'); if(supported) return true; }catch{}
   }
-  const ua = navigator.userAgent||'';
-  if(/OculusBrowser|Oculus|Quest|Meta Quest/i.test(ua)) return { manufacturer:'Oculus', model:'Quest'};
-  return null;
+  return /OculusBrowser|Oculus|Quest|Meta Quest/i.test(navigator.userAgent);
 }
-vrBtn.addEventListener('click', e=>{ e.stopPropagation(); const w=window.open('vr.html','_blank','noopener'); if(!w) alert('Popup blocked. Allow popups for immersive VR.'); });
+detectVRHeadset().then(info=>{
+  if(info){ vrBtn.style.display='block'; vrBtn.setAttribute('aria-hidden','false'); }
+});
 
+/* ESC key closes youtube or QR */
 document.addEventListener('keydown', e=>{
   if(e.key==='Escape'){
-    if(youtubeOverlay.style.display==='flex'){ youtubeOverlay.style.opacity=0; setTimeout(()=>{youtubeOverlay.style.display='none'; youtubeFrame.src='';},280);}
+    if(youtubeOverlay.style.display==='flex'){ youtubeOverlay.style.opacity=0; setTimeout(()=>{ youtubeOverlay.style.display='none'; youtubeFrame.src=''; },280);}
     if(qrOverlay.style.display==='flex'){ qrOverlay.style.opacity=0; setTimeout(()=> qrOverlay.style.display='none',280);}
   }
 });
