--- a/index.html
+++ b/index.html
@@ -21,30 +21,37 @@ body, #overlay, #overlay-content, #hotspot-panel, #video-link-panel, #license-ba
 #overlay { position: fixed; inset:0; background: rgba(0,0,0,0.40); display:flex; align-items:center; justify-content:center; z-index:40; }
 #overlay[aria-hidden="true"] { display:none; }
 #overlay-content {
-    width:45%;
-    max-width:45%;
-    height:auto;
+    width:45%;          /* fixed width */
+    max-width:90vw;
+    height:auto;        /* auto-adjust height */
+    max-height:90vh;
     background: rgba(255,255,255,0.18);
     backdrop-filter: blur(10px);
     border-radius:18px;
-    padding:36px 24px;
+    padding:24px;
     color:#fff;
     text-align:center;
     display:flex;
     flex-direction:column;
     justify-content:flex-start;
-    gap:16px;
+    gap:12px;
+    margin:0 auto;
 }
-#overlay-content p { margin:0; }
-#intro-icon { width:80px; height:80px; margin-bottom:12px; display:block; margin-left:auto; margin-right:auto; }
+#overlay-content p {
+    margin:0 auto;
+    max-width:42ch;  /* ~7 words per line */
+    text-align:center;
+    line-height:1.5em;
+}
+#intro-icon { width:80px; height:80px; margin:0 auto 12px auto; display:block; } /* center icon */
 #instructions-line { font-weight:700; text-decoration:underline; margin-top:8px; color:#fff; }
-#instructions-list { margin:6px 0 0 0; line-height:1.6em; color:#fff; text-align:center; }
+#instructions-list { margin:6px 0 0 0; line-height:1.6em; color:#fff; }
 #instructions-list p { margin:6px 0; text-align:center; }
-#dismiss-message { margin-top:0; font-size:0.95rem; color:#d0d0d0; text-align:center; }
-hr { border:1px solid #fff; margin:12px auto; width:50%; }
+hr { border:1px solid #fff; width:60%; margin:12px auto; }
+#dismiss-message { margin-top:0; font-size:0.95rem; color:#d0d0d0; text-align:center; line-height:1.6em; }
 
 /* tooltip preview */
-#tooltip-preview { display:none; position:fixed; width:max-content; max-width:220px; background: rgba(0,0,0,0.9); color:#fff; text-align:center; padding:4px; border-radius:6px; z-index:9999; pointer-events:auto; font-size:0.85rem; line-height:1.2; box-shadow:0 6px 18px rgba(0,0,0,0.6); }
+#tooltip-preview { display:none; position:fixed; width:max-content; max-width:220px; background: rgba(0,0,0,0.9); color:#fff; text-align:center; padding:4px; border-radius:6px; z-index:9999; pointer-events:auto; font-size:0.85rem; line-height:1.2; }
 
 /* hotspot panel */
 #hotspot-panel { position: fixed; top:18px; left:50%; transform:translateX(-50%); background: rgba(0,0,0,0.20); backdrop-filter: blur(10px); padding:12px 18px; border-radius:14px; color:#fff; font-size:0.98rem; text-align:center; max-width:82%; z-index:20; display:none; }
@@ -100,7 +107,7 @@ hr { border:1px solid #fff; margin:12px auto; width:50%; }
     <p>Hi, I'm Lex, a nobody magician who enjoys travel, tech and research. These images are from my recent travels in Northern California taken with a DJI OSMO 360 camera at 120 MP.</p>
     <p>If you would like to see my other work click <span id="preview-link" style="text-decoration:underline; color:#bfe; cursor:pointer;">here</span>.</p>
 
-    <hr style="border:1px solid #fff; margin:12px auto; width:50%;">
+    <hr>
 
     <div id="instructions-line">Instructions</div>
     <div id="instructions-list">
@@ -109,8 +116,7 @@ hr { border:1px solid #fff; margin:12px auto; width:50%; }
       <p>• Use fullscreen button for best experience.</p>
     </div>
 
-    <div style="height:12px;"></div>
-
+    <div style="height:24px;"></div> <!-- extra spacing -->
     <div id="dismiss-message">Click Anywhere to Dismiss this Message</div>
   </div>
 </div>
@@ -224,20 +230,20 @@ document.addEventListener('keydown', e=>{
   }
 });
 
-/* disable right click */
-document.addEventListener('contextmenu', e=>{ e.preventDefault(); });
+/* Disable right-click */
+document.addEventListener('contextmenu', e => e.preventDefault());
 
-/* printscreen white flash */
+/* PrintScreen flash */
 document.addEventListener('keyup', e=>{
-  if(e.key==='PrintScreen'){
-    const flash=document.createElement('div');
-    flash.style.position='fixed';
-    flash.style.inset='0';
-    flash.style.background='#fff';
-    flash.style.zIndex=99999;
-    document.body.appendChild(flash);
-    setTimeout(()=>document.body.removeChild(flash),500);
-  }
+    if(e.key==='PrintScreen'){
+        const flash = document.createElement('div');
+        flash.style.position='fixed';
+        flash.style.inset='0';
+        flash.style.background='#fff';
+        flash.style.zIndex='99999';
+        document.body.appendChild(flash);
+        setTimeout(()=>document.body.removeChild(flash),500);
+    }
 });
 </script>
 </body>
